# python-keras-cnn

./: .gitignore  README.md  act.bat  app.spec  de-act.bat  ex.bat  py.bat  pyproject.toml
data/: resources.qrc
data/app_input/: lung-data-params.json  lung-hyper-params-1.json  lung-hyper-params-3.json  lung-hyper-params-4.json  lung-hyper-params-5.json  mnist-data-params.json  mnist-hyper-params-5.json
docs/: Python-Keras-CNN.odt  app-2.spec  draw-issue.txt  exe-issue.txt  pyproject-2.toml  pyproject-3.toml  pyproject-5.toml  pyproject.toml  uv-instructions.txt  uv-py-to-exe-2.bat  uv-py-to-exe-3.bat  uv-py-to-exe.bat
src/cnnpy/: app.py  hook-scikeras.py  resources_rc.py
src/cnnpy/appctrl/: about_dialog.py  app_util.py  controller.py  data_thread.py  plotter.py  train_thread.py  tune_thread.py  tutor_dialog.py
src/cnnpy/thenet/: netmodel.py  nettest.py  nettrain.py
src/cnnpy/theprep/: data_params.py  dataprep.py  hyper_params.py
test/test_cnnpy/: test_app.py
test/test_cnnpy/test_appctrl/: test_control.py  test_plot.py
test/test_cnnpy/test_thenet/: test_nettrain.py
test/test_cnnpy/test_theprep/: test_dataprep.py
