[project]
name = "convonet"
version = "0.1.0"
description = "CNN App"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keras>=3.12.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyside6>=6.10.0",
    "scikeras>=0.13.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-qt>=4.5.0",
]

[tool.uv.sources]
torch = { index = "torch-cu130" }


[[tool.uv.index]]
name = "torch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.setuptools.package-dir]
"" = "."
"src" = "src"
"src.cnnpy" = "src/cnnpy"

[tool.pytest.ini_options]
pythonpath = [
  "src",
  "src/cnnpy",
  "src/cnnpy/appctrl",
  "src/cnnpy/thenet",
  "src/cnnpy/theprep"
]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"
